--- a/katalog-3d-api.csproj
+++ b/katalog-3d-api.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <!-- <InvariantGlobalization>true</InvariantGlobalization> -->
     <RootNamespace>katalog_3d_api</RootNamespace>
   </PropertyGroup>
 
